@@ -1,4 +1,3 @@
-# Sample secrets file for testing.
 [batou]
 members = ct@gocept.com
 
